# ImageReduction

starter-files/: CMakeLists.txt  Image.cpp  Matrix.cpp  README.md  resize.cpp
